--- a/mobile/src/main/res/layout/activity_main.xml
+++ b/mobile/src/main/res/layout/activity_main.xml
@@ -14,8 +14,7 @@
         app:insetForeground="#29000000"
         android:elevation="10dp"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
-    </edu.zju.huyifeng.sportwear.view.ScrimInsetsFrameLayout>
+        xmlns:app="http://schemas.android.com/apk/res-auto"></edu.zju.huyifeng.sportwear.view.ScrimInsetsFrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,13 +25,13 @@
 
             layout="@layout/toolbar_default"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
         <FrameLayout
             android:id="@+id/container"
             android:layout_width="match_parent"
             android:clickable="true"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" />
     </LinearLayout>
     <!-- android:layout_marginTop="?android:attr/actionBarSize"-->
 
@@ -42,6 +41,6 @@
         android:layout_width="@dimen/navigation_drawer_width"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:layout="@layout/fragment_navigation_drawer"/>
+        app:layout="@layout/fragment_navigation_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
