--- a/mobile/src/main/res/layout/drawer_row.xml
+++ b/mobile/src/main/res/layout/drawer_row.xml
@@ -16,7 +16,6 @@
         android:textSize="20sp"
         android:alpha="0.87"
         android:gravity="center_vertical"
-        android:textColor="#000000"
-        />
+        android:textColor="#000000" />
 
 </LinearLayout>
