--- a/mobile/src/main/res/menu/menu_friend.xml
+++ b/mobile/src/main/res/menu/menu_friend.xml
@@ -1,27 +1,30 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MainActivity">
     <item
-    android:id="@+id/menu_search"
-    android:orderInCategory="1"
-    android:title="Menu item"
-    app:showAsAction="never"/>
+        android:id="@+id/action_add_friend"
+        android:icon="@drawable/ic_menu_check"
+        android:orderInCategory="2"
+        android:title="action_month"
+        app:showAsAction="always" />
     <item
-    android:id="@+id/ab_search"
-    android:orderInCategory="80"
-    android:title="action_search"
-    app:actionViewClass="android.support.v7.widget.SearchView"
-    app:showAsAction="ifRoom"/>
+        android:id="@+id/ab_search"
+        android:orderInCategory="1"
+        android:title="action_search"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/menu_search"
+        android:orderInCategory="3"
+        android:title="好友请求记录"
+        app:showAsAction="never" />
+
     <!--<item-->
-        <!--android:id="@+id/action_share"-->
-        <!--android:orderInCategory="90"-->
-        <!--android:title="action_share"-->
-        <!--app:actionProviderClass="android.support.v7.widget.ShareActionProvider"-->
-        <!--app:showAsAction="never"/>-->
-    <!--<item-->
-        <!--android:id="@+id/action_month"-->
-        <!--android:orderInCategory="1"-->
-        <!--android:title="action_month"-->
-        <!--android:icon="@drawable/ic_menu_check"-->
-        <!--app:showAsAction="always"/>-->
+    <!--android:id="@+id/action_share"-->
+    <!--android:orderInCategory="90"-->
+    <!--android:title="action_share"-->
+    <!--app:actionProviderClass="android.support.v7.widget.ShareActionProvider"-->
+    <!--app:showAsAction="never"/>-->
+
 </menu>
