--- a/mobile/src/main/res/menu/menu_main.xml
+++ b/mobile/src/main/res/menu/menu_main.xml
@@ -18,7 +18,7 @@
         android:orderInCategory="2"
         android:title="action_share"
         app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
     <item
         android:id="@+id/action_month"
         android:orderInCategory="1"
