--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -19,4 +19,9 @@
     <color name="bar_fill1">#ffccbc</color>
     <color name="bar_fill2">#def8ce</color>
     <color name="bar_grid">#ffffff</color>
+
+
+
+    <color name="screen_background">#333</color>
+    <color name="display_background">#000</color>
 </resources>
